--- a/public/styles.css
+++ b/public/styles.css
@@ -41,6 +41,7 @@ body {
 
 #form-container {
     margin: 20px;
+    max-width: 300px;
     min-height: 220px;
     min-width: 300px;
     padding: 15px;
@@ -53,14 +54,13 @@ body {
 
 #message-div {
     color: #ff0000;
-    margin-bottom: -8px;
     min-height: 18px;
 }
 
 #search-button {
     border-radius: 5px;
     float: right;
-    margin: 0px 20px;
+    margin: 0px 15px;
     min-height: 25px;
     min-width: 70px;
 }
