--- a/public/styles.css
+++ b/public/styles.css
@@ -109,3 +109,71 @@ body {
     flex-wrap: wrap;
     width: 115px;
 }
+
+/* Modal */
+#modal-overlay {
+    background-color: rgba(0, 0, 0, 0.2) ;
+    display: none;
+    height: 100%;
+    left: 0px;
+    overflow: auto;
+    padding: 100px;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 1;
+}
+
+#modal-content {
+    background-color:#e7e7e7;
+    border: 1px solid;
+    border-radius: 20px;
+    -webkit-box-shadow: 5px 1px 10px 5px rgba(0,0,0,0.12); 
+    box-shadow: 5px 1px 10px 5px rgba(0,0,0,0.12);
+    margin: auto;
+    padding: 0px;
+    position: relative;
+    width: 45%;
+}
+
+#modal-close {
+    color: #ffffff;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#modal-close:hover {
+    color: #000000;
+    cursor: pointer;
+}
+
+#modal-header {
+    margin: 20px;
+}
+
+#modal-body {
+    margin: 10px;
+    padding: 2px 16px;
+}
+
+#confirm-create-modify-button {
+    margin-left: auto;
+    margin-top: 20px;
+    margin-right: auto;
+}
+
+#modal-number {
+    margin-bottom: 10px;
+    margin-top: -20px;
+}
+
+.input-field {
+    border-radius: 5px;
+    border: 0px;
+    margin-bottom: 3px; 
+    margin-top: 5px;
+    min-height: 20px;
+    min-width: 255px;
+    padding: 5px;    
+}
