--- a/public/styles.css
+++ b/public/styles.css
@@ -168,6 +168,11 @@ body {
     margin-top: -20px;
 }
 
+#modal-number-display {
+    margin-bottom: 10px;
+    margin-top: -20px;
+}
+
 .input-field {
     border-radius: 5px;
     border: 0px;
@@ -177,3 +182,4 @@ body {
     min-width: 255px;
     padding: 5px;    
 }
+
